<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.cenecmalaga.lsedactilologico.actividades.AyudanosAMejorar">

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonGrabar"
        app:layout_constraintTop_toBottomOf="@+id/textoEnvianos" />

    <TextView
        android:id="@+id/tituloAyudanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ayudanos"
        android:textStyle="bold"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoEnvianos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/envianos"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAyudanos" />

    <Button
        android:id="@+id/botonGrabar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/grabar"
        app:layout_constraintEnd_toStartOf="@id/botonGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoEnvianos" />

    <Button
        android:id="@+id/botonReproducir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reproducir"
        app:layout_constraintEnd_toStartOf="@id/botonParar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonGrabar" />

    <Button
        android:id="@+id/botonParar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/parar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonReproducir"
        app:layout_constraintTop_toBottomOf="@+id/botonGuardar" />

    <ImageView
        android:id="@+id/imagenGrabando"
        android:layout_width="112dp"
        android:layout_height="159dp"
        android:src="@drawable/micrec"
        android:contentDescription="@string/grabar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonReproducir" />

    <ImageView
        android:id="@+id/imagenReproduciendo"
        android:layout_width="112dp"
        android:layout_height="159dp"
        android:src="@drawable/speaker"
        android:contentDescription="@string/reproducir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonReproducir" />
</androidx.constraintlayout.widget.ConstraintLayout>