<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_gradiente_lista"
    tools:context="es.cenecmalaga.lsedactilologico.actividades.ActividadSobreNosotros">

    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="30dp"
        android:contentDescription="@string/app_name"
        android:maxHeight="200dp"
        android:src="@drawable/lsedactilologico_cenec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloSobreNosotros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloSobreNosotros"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogo" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txtSobreNosotros"
        app:layout_constraintBottom_toTopOf="@+id/contribuidoresSon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloSobreNosotros" />

    <TextView
        android:id="@+id/contribuidoresSon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txtContribuidores"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaContribuidores"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contribuidoresSon" />

</androidx.constraintlayout.widget.ConstraintLayout>